--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "bootstrap": "^5.2.1",
+    "bootstrap-icons": "^1.10.3",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "rxjs": "~7.5.0",
